--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-ui-scrollspy": "^2.3.0",
     "sass": "^1.77.4",
     "web-vitals": "^2.1.4"
   },
